# Masterarbeit-Implementierungen

MasterarbeitImplementierung/: CMakeLists.txt  README.md  ckksrns-fhe.cpp
MasterarbeitImplementierung/src/: BenchmarkUC1.cpp  BenchmarkUC1hybrid.cpp  BenchmarkUC2.cpp  BenchmarkUC2hybrid.cpp  CMakeCache.txt  FleetData.json
